--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
+    "i": "^0.3.7",
+    "method-override": "^3.0.0",
     "mongoose": "^6.0.13",
+    "npm": "^8.1.4",
     "save": "^2.4.0"
   }
 }
